[package]
name = "lunco-autopilot"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
lunco-core = { path = "../lunco-core" }
# The driving BEHAVIOUR is a lunco-behavior tree (sequence waypoints, when-to-brake
# — the GLUE); its leaves call this crate's Rust steering math. Dependency-free BT
# kernel, so the autopilot is engine/rhai-free.
lunco-behavior = { path = "../lunco-behavior" }
# The tree is authored as DATA (a `BehaviorSpec`), so rhai/JSON can define and
# hot-swap it. serde deserializes that data; the crate never compiles rhai.
serde = { workspace = true }
serde_json = { workspace = true }
# BehaviorTree.CPP v4 XML interchange: the `btcpp_xml` codec round-trips a tree's
# JSON to/from the de-facto robotics format (Groot2 editor, ROS/Nav2), so a
# behaviour authored here can be edited/run by real flight software and back.
quick-xml = "0.39"
# Control is the ONE generic `SetPorts` command (a batch of named input-port
# writes); the autopilot emits it exactly like the keyboard and scripts do.
lunco-cosim = { path = "../lunco-cosim" }
# ALL time comes from the mission-time spine: `WorldTime.sim_secs` is the single
# clock the behaviour tree reads (so waits freeze under pause/warp) — never Bevy's
# `Time`. AutopilotPlugin guard-adds `TimePlugin` so the clock is always present.
lunco-time = { path = "../lunco-time" }
# Physics-backed spatial queries for HEADLESS obstacle sensing: the `sense_clearance`
# system casts a forward ray-fan via avian `SpatialQuery` (runs fine with no render).
# Same workspace avian as the rest of the sim, so no extra feature surface.
avian3d = { workspace = true }

[lints]
workspace = true
