[package]
name = "lunco-autopilot"
version = "0.6.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
bevy = { workspace = true }
lunco-core = { path = "../lunco-core" }
# The `run_tool` leaf EMITS `ToolFired`; this crate's plugin guard-adds the
# dispatcher that CONSUMES it, so the producer and consumer are never wired
# apart (a `run_tool` leaf firing into a world with no dispatcher is a silent
# no-op — the bug this coupling exists to prevent).
lunco-tools-bevy = { path = "../lunco-tools-bevy" }
# The driving BEHAVIOUR is a lunco-behavior tree (sequence waypoints, when-to-brake
# — the GLUE); its leaves call this crate's Rust steering math. Dependency-free BT
# kernel, so the autopilot is engine/rhai-free.
lunco-behavior = { path = "../lunco-behavior" }
# The tree is authored as DATA (a `BehaviorSpec`), so rhai/JSON can define and
# hot-swap it. serde deserializes that data; the crate never compiles rhai.
serde = { workspace = true }
serde_json = { workspace = true }
# Error type for the `.btxml` behaviour-tree asset loader (Bevy's `AssetLoader`
# requires a `std::error::Error`), matching the `.rhai`/`.py` source loaders.
anyhow = { workspace = true }
# BehaviorTree.CPP v4 XML interchange: the `btcpp_xml` codec round-trips a tree's
# JSON to/from the de-facto robotics format (Groot2 editor, ROS/Nav2), so a
# behaviour authored here can be edited/run by real flight software and back.
# 0.41 to match the copy already in the tree — two majors of the same parser
# would otherwise both build, and this one sits on the user-XML path (BehaviorTree
# .btcpp files), so it is the copy that wants the newer parser fixes.
quick-xml = "0.41"
# Control is the ONE generic `SetPorts` command (a batch of named input-port
# writes); the autopilot emits it exactly like the keyboard and scripts do.
lunco-cosim = { path = "../lunco-cosim" }
# ALL time comes from the mission-time spine: `WorldTime.sim_secs` is the single
# clock the behaviour tree reads (so waits freeze under pause/warp) — never Bevy's
# `Time`. AutopilotPlugin guard-adds `TimePlugin` so the clock is always present.
lunco-time = { path = "../lunco-time" }
# Physics-backed spatial queries for HEADLESS obstacle sensing: the `sense_clearance`
# system casts a forward ray-fan via avian `SpatialQuery` (runs fine with no render).
# Same workspace avian as the rest of the sim, so no extra feature surface.
avian3d = { workspace = true }
big_space = { workspace = true }

[lints]
workspace = true
