[package]
name = "lunco-avatar"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
# egui + the workbench/theme shell are used ONLY by `src/ui/` (AvatarUiPlugin).
# Optional so consumers that need just the camera components (e.g. lunco-usd-sim
# on a headless server) build with `default-features = false` → no egui→winit.
bevy_egui = { workspace = true, optional = true }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-theme = { path = "../lunco-theme", optional = true }
avian3d = { workspace = true }
big_space = { workspace = true }
leafwing-input-manager = { workspace = true }
transform-gizmo-bevy = "0.9.0"
lunco-controller = { path = "../lunco-controller" }
lunco-celestial = { path = "../lunco-celestial" }
lunco-environment = { path = "../lunco-environment" }
lunco-core = { path = "../lunco-core" }
lunco-mobility = { path = "../lunco-mobility" }
lunco-settings = { path = "../lunco-settings" }
lunco-assets = { workspace = true }
serde = { workspace = true }

# Built-in screen recorder (EasyScreenRecordPlugin). Optional + opt-in via the
# `recording` feature: the `screenrecording` feature links libx264, which is
# native-only and unsupported on Windows. Pinned to match the workspace bevy.
bevy_dev_tools = { version = "=0.18.1", default-features = false, features = ["screenrecording"], optional = true }

[features]
default = ["ui"]
# The egui camera/inspector panels (`src/ui/`, AvatarUiPlugin). Off ⇒ no egui;
# the possession observers + camera components stay available.
ui = ["dep:bevy_egui", "dep:lunco-workbench", "dep:lunco-theme"]
# Compile the video encoder. Native Linux/macOS only — needs system libx264.
# Without it the recording settings/command/hotkey still exist but capture
# nothing (they log a warning). Forwarded by `lunco-client`'s `recording` feature.
recording = ["dep:bevy_dev_tools"]

[lints]
workspace = true
