[package]
name = "lunco-avatar"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
# RENDER-FREE. `bevy_camera` gives `Camera` / `Projection` / `Visibility` /
# `RenderLayers`, `bevy_light` the lights, `bevy_mesh` `Mesh3d` — none of them pulls
# `bevy_render`. There is no `bevy_pbr` / `bevy_core_pipeline` here and there must
# not be: the camera *pipeline* (`Camera3d`, tonemapping, MSAA, bloom) is attached by
# `lunco-render-bevy` from the `lunco_render::SceneCamera` intent this crate spawns,
# and `CaptureScreenshot` (a render-world readback) moved there wholesale.
# See docs/architecture/render-decoupling.md.
bevy = { workspace = true, features = ["bevy_camera", "bevy_light", "bevy_mesh"] }
# Camera INTENT: `SceneCamera` — "this entity is the scene camera, and this is how it
# should look" — stated without naming a render pipeline.
lunco-render = { path = "../lunco-render" }
# egui + the workbench/theme shell are used ONLY by `src/ui/` (AvatarUiPlugin).
# Optional so consumers that need just the camera components (e.g. lunco-usd-sim
# on a headless server) build with `default-features = false` → no egui→winit.
bevy_egui = { workspace = true, optional = true }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-theme = { path = "../lunco-theme", optional = true }
avian3d = { workspace = true }
big_space = { workspace = true }
leafwing-input-manager = { workspace = true }
lunco-controller = { path = "../lunco-controller" }
# Read `SimComponent` presence to pick the input map for a possessed vessel by
# TOPOLOGY (Modelica-flown → lander controls) rather than a vessel-kind marker.
lunco-cosim = { path = "../lunco-cosim" }
# `FlightSoftware` = the control-surface signal; possessable = has a control
# surface (`FlightSoftware`) or Modelica inputs (`SimComponent`) — no `Vessel` tag.
lunco-fsw = { path = "../lunco-fsw" }
lunco-celestial = { path = "../lunco-celestial", default-features = false }
lunco-environment = { path = "../lunco-environment" }
lunco-core = { path = "../lunco-core" }
lunco-time = { path = "../lunco-time" }
lunco-settings = { path = "../lunco-settings" }
lunco-assets = { workspace = true }
serde = { workspace = true }

# Built-in screen recorder (EasyScreenRecordPlugin). Optional + opt-in via the
# `recording` feature: the `screenrecording` feature links libx264, which is
# native-only and unsupported on Windows. Pinned to match the workspace bevy.
bevy_dev_tools = { version = "=0.19.0", default-features = false, features = ["screenrecording"], optional = true }

[features]
default = ["ui"]
# The egui camera/inspector panels (`src/ui/`, AvatarUiPlugin). Off ⇒ no egui;
# the possession observers + camera components stay available.
ui = ["dep:bevy_egui", "dep:lunco-workbench", "dep:lunco-theme"]
# Compile the video encoder. Native Linux/macOS only — needs system libx264.
# Without it the recording settings/command/hotkey still exist but capture
# nothing (they log a warning). Forwarded by `lunco-sandbox`'s `recording` feature.
recording = ["dep:bevy_dev_tools"]

[lints]
workspace = true
