[package]
name = "lunco-canvas"
version = "0.1.0"
edition = "2021"
description = "LunCoSim's generic canvas — stateful Scene + Viewport + pluggable Tools/Layers/Overlays. Domain-agnostic; drives Modelica diagrams, node-graphs, annotations, and anything else that needs a 2D scene editor."

[dependencies]
bevy_egui = { workspace = true }
lunco-theme = { path = "../lunco-theme" }
# `lunco-canvas` owns both rendering backends so embedders can pick
# at runtime without wiring two parallel paint pipelines. egui is
# the historical default; vello is the GPU-compute path.
bevy_vello = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
