[package]
name = "lunco-celestial-ephemeris"
version = "0.6.0-dev"
edition = "2021"

[dependencies]
bevy = { workspace = true }
serde_json = { workspace = true }
lunco-celestial = { path = "../lunco-celestial" }
lunco-assets = { workspace = true }
celestial-ephemeris = "0.1.1-alpha.2"
celestial-time = "0.1.1-alpha.2"
celestial-core = "0.1.1-alpha.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.9", features = ["tls"] }

[lints]
workspace = true
