[package]
name = "lunco-celestial-ephemeris"
version = "0.6.0-dev"
edition = "2021"
license.workspace = true

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
lunco-celestial = { path = "../lunco-celestial", default-features = false }
lunco-assets = { workspace = true }
lunco-storage = { path = "../lunco-storage" }
celestial-ephemeris = "0.1.1-alpha.2"
celestial-time = "0.1.1-alpha.2"
celestial-core = "0.1.1-alpha.2"

[lints]
workspace = true
