[package]
name = "lunco-celestial"
version = "0.6.0-dev"
edition = "2021"

[features]
default = ["ui"]
# The egui inspector panels (`src/ui/`, CelestialUiPlugin). Off ⇒ no egui; the
# GravityPlugin + celestial sim stay available (e.g. a headless server).
ui = ["dep:bevy_egui", "dep:lunco-workbench", "dep:lunco-theme"]
# Bake Earth/Moon textures + Artemis 2 mission JSON + ephemeris CSV into the
# binary via `include_bytes!`. Only needed by binaries that actually render
# celestial bodies on wasm32 (e.g. sandbox). Off by default so the
# Modelica IDE doesn't drag in ~5 MB of textures it never uses.
embed-assets = []

[dependencies]
# `smaa_luts` is mandatory: `big_space_setup` spawns the observer camera with
# `Smaa`, and without the LUT bevy binds a wrong-dimension placeholder → every
# frame drops (black viewport). Feature-unification carries it to dependent bins.
# `bevy_text`/`bevy_sprite_render`/`default_font`: the spacecraft billboard
# labels (missions.rs) use `Text2d` — bevy 0.19 no longer pulls text in via
# the render features, so opt in explicitly.
bevy = { workspace = true, features = ["bevy_pbr", "bevy_gltf", "bevy_world_serialization", "bevy_mesh", "bevy_light", "bevy_post_process", "bevy_anti_alias", "smaa_luts", "mesh_picking", "bevy_text", "bevy_sprite_render", "default_font"] }
# egui shell used only by `src/ui/` (CelestialUiPlugin) — optional for headless.
bevy_egui = { workspace = true, optional = true }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-theme = { path = "../lunco-theme", optional = true }
bevy_shader = { workspace = true }
big_space = { workspace = true }
# Heavy VSOP2013/ELP/EOP integration lives in the sibling crate
# `lunco-celestial-ephemeris`. This crate only defines the
# `EphemerisProvider` trait and a no-op default; apps that need real
# planetary positions add the ephemeris crate's plugin.
lunco-core = { path = "../lunco-core" }
lunco-api = { path = "../lunco-api" }
lunco-hooks = { path = "../lunco-hooks" }
lunco-time = { path = "../lunco-time" }
lunco-render = { path = "../lunco-render" }
lunco-environment = { path = "../lunco-environment" }
lunco-assets = { workspace = true }
lunco-storage = { path = "../lunco-storage" }
avian3d = { workspace = true }
lunco-controller = { path = "../lunco-controller" }
bevy_asset = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
lunco-materials = { path = "../lunco-materials" }
lunco-terrain-globe = { path = "../lunco-terrain-globe" }
# Read-only terrain LOS: the link kernel marches `los_hit` over each DEM's
# `SurfaceOracle` (a plain component read — no `&mut World`, so the system stays
# non-exclusive). No cycle: terrain-surface does not depend on celestial.
lunco-terrain-surface = { path = "../lunco-terrain-surface" }
lunco-terrain-core = { path = "../lunco-terrain-core" }


# ureq is desktop-only: HTTP client with TLS for downloading ephemeris data
# On wasm32, use browser fetch() via web-sys instead
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { workspace = true }

[lints]
workspace = true
