[package]
name = "lunco-celestial"
version = "0.6.0-dev"
edition = "2021"
license.workspace = true

[features]
default = ["ui"]
# The egui inspector panels (`src/ui/`, CelestialUiPlugin). Off ⇒ no egui; the
# GravityPlugin + celestial sim stay available (e.g. a headless server).
ui = ["dep:bevy_egui", "dep:lunco-workbench", "dep:lunco-theme"]
# Bake Earth/Moon textures + Artemis 2 mission JSON + ephemeris CSV into the
# binary via `include_bytes!`. Only needed by binaries that actually render
# celestial bodies on wasm32 (e.g. sandbox). Off by default so the
# Modelica IDE doesn't drag in ~5 MB of textures it never uses.
embed-assets = []

[dependencies]
# RENDER-FREE (2026-07-13, docs/architecture/render-decoupling.md). This crate
# states appearance as INTENT — `lunco_render::{PbrLook, SceneCamera}` and
# `lunco_materials::ShaderLook` — and never names a material or a render pipeline,
# so `bevy_pbr` / `bevy_core_pipeline` / `bevy_render` (→ wgpu + naga) are GONE from
# its closure, and with them from the `--no-ui` server and the wasm worker.
# Guard (must all report "package ID not found"):
#   cargo tree -p lunco-celestial -i wgpu
#   cargo tree -p lunco-celestial -i bevy_pbr
#   cargo tree -p lunco-celestial -i bevy_core_pipeline
# Dropped with it: `bevy_post_process`/`bevy_anti_alias`/`smaa_luts` (the observer
# camera's `Bloom` was a no-op on a non-HDR target — review `R4` — and SMAA was
# already gone; MSAA/tonemapping now come from `SceneCamera`) and `tonemapping_luts`.
#
# Also dropped: `bevy_text`/`bevy_sprite_render`/`default_font`. They were here for
# ONE billboard `Text2d` on a spacecraft — and `bevy_sprite_render` pulls
# `bevy_render`, which made this crate the LAST thing dragging the whole GPU stack
# into the `--no-ui` server, long after every material and camera had been decoupled.
# A spacecraft's NAME is simulation data and stays here (`lunco_render::WorldLabel`);
# the glyphs are built by `lunco-render-bevy`.
#
# KEPT: `bevy_mesh` (Mesh3d/PrimitiveTopology — render-free), `bevy_camera`
# (Camera/Projection/Exposure/Visibility/Hdr), `bevy_light` (DirectionalLight,
# NotShadowCaster), `bevy_gltf`, `mesh_picking`.
bevy = { workspace = true, features = ["bevy_gltf", "bevy_world_serialization", "bevy_mesh", "bevy_camera", "bevy_light", "mesh_picking"] }
bevy_mesh = { workspace = true }
# egui shell used only by `src/ui/` (CelestialUiPlugin) — optional for headless.
bevy_egui = { workspace = true, optional = true }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-theme = { path = "../lunco-theme", optional = true }
big_space = { workspace = true }
# Heavy VSOP2013/ELP/EOP integration lives in the sibling crate
# `lunco-celestial-ephemeris`. This crate only defines the
# `EphemerisProvider` trait and a no-op default; apps that need real
# planetary positions add the ephemeris crate's plugin.
lunco-core = { path = "../lunco-core" }
# `default-features = false` is LOAD-BEARING. lunco-api's defaults include its
# `render` feature (the screenshot readback → `bevy/bevy_render` +
# `bevy/bevy_core_pipeline`), and cargo unifies features across the graph — so
# omitting it here re-links wgpu + naga into the `--no-ui` server through this
# crate. Same trap as the `lunco-doc-bevy` one in `lunco-workspace`.
# See docs/architecture/render-decoupling.md.
lunco-api = { path = "../lunco-api", default-features = false }
lunco-hooks = { path = "../lunco-hooks" }
lunco-time = { path = "../lunco-time" }
# `LunarSunShadow` (the canonical cascade config) AND the appearance/camera INTENT
# types this crate now states instead of materials: `PbrLook`, `SceneCamera`.
lunco-render = { path = "../lunco-render" }
lunco-environment = { path = "../lunco-environment" }
lunco-assets = { workspace = true }
lunco-storage = { path = "../lunco-storage" }
avian3d = { workspace = true }
lunco-controller = { path = "../lunco-controller" }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `bevy_asset`, `bevy_shader` and `uuid` are GONE: they existed only for the
# `load_internal_asset!` + const-UUID `Handle<Shader>` of the dead trajectory
# `MaterialExtension` (removed 2026-07-13). Nothing here holds a shader handle now.
#
# `ShaderLook` + `ParamValue` — the custom-shader appearance INTENT the globe tiles
# state (blueprint.wgsl, named by path). `lunco-materials` is render-free:
# `ShaderMaterial` (the `AsBindGroup`, hence `bevy_pbr`) moved to `lunco-render-bevy`
# on 2026-07-13, so this crate's closure is wgpu-free. Keep it that way.
lunco-materials = { path = "../lunco-materials" }
lunco-terrain-globe = { path = "../lunco-terrain-globe" }
# Read-only terrain LOS: the link kernel marches `los_hit` over each DEM's
# `SurfaceOracle` (a plain component read — no `&mut World`, so the system stays
# non-exclusive). No cycle: terrain-surface does not depend on celestial.
lunco-terrain-surface = { path = "../lunco-terrain-surface" }
lunco-terrain-core = { path = "../lunco-terrain-core" }

# NOTE: `ureq` used to live here for an ephemeris-download path that no longer
# exists in this crate (zero references in `src/`). Ephemeris fetching is
# `lunco-celestial-ephemeris`'s job. Do not re-add without a call site.

[dev-dependencies]
# `HeightGrid`, to build the minimal `SurfaceOracle` a terrain entity needs in
# `tests/terrain_curvature_determinism.rs`. Test-only: the crate itself talks to
# terrain through `lunco-terrain-surface`'s types and must not depend on the DEM
# raster layer.
lunco-obstacle-field = { path = "../lunco-obstacle-field" }

[lints]
workspace = true
