[package]
name = "lunco-client"
version = "0.6.0-dev"
edition = "2021"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

[[bin]]
name = "sandbox_web"
path = "src/bin/sandbox.rs"

[[bin]]
name = "lunco_client_web"
path = "src/bin/lunco_client_web.rs"

[[bin]]
name = "model_viewer"
path = "src/bin/model_viewer.rs"

[dependencies]
bevy = { workspace = true, features = ["bevy_pbr", "bevy_gltf", "bevy_scene", "bevy_mesh", "bevy_light", "bevy_post_process", "bevy_anti_alias", "mesh_picking", "tonemapping_luts", "bevy_gizmos", "bevy_gizmos_render"] }
avian3d = { workspace = true }
big_space = { workspace = true }
leafwing-input-manager = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-hardware = { path = "../lunco-hardware" }
lunco-mobility = { path = "../lunco-mobility" }
lunco-robotics = { path = "../lunco-robotics" }
lunco-controller = { path = "../lunco-controller" }
lunco-fsw = { path = "../lunco-fsw" }
lunco-avatar = { path = "../lunco-avatar" }
lunco-celestial = { path = "../lunco-celestial", features = ["embed-assets"] }
lunco-terrain = { path = "../lunco-terrain" }
lunco-materials = { path = "../lunco-materials" }
lunco-modelica = { path = "../lunco-modelica" }
lunco-cosim = { path = "../lunco-cosim" }
lunco-environment = { path = "../lunco-environment" }
lunco-scripting = { path = "../lunco-scripting" }
lunco-doc = { path = "../lunco-doc" }
lunco-theme = { path = "../lunco-theme" }
lunco-usd = { path = "../lunco-usd" }
lunco-sandbox-edit = { path = "../lunco-sandbox-edit" }
lunco-ui = { path = "../lunco-ui" }
lunco-workbench = { path = "../lunco-workbench" }
lunco-assets = { workspace = true }
lunco-api = { path = "../lunco-api" }
bevy_egui = { workspace = true }

# Replace glibc's allocator with mimalloc on native targets. Bevy +
# avian generate huge cross-thread allocator traffic; glibc's
# arena-per-thread fallback still hits a global lock which serialised
# our hot frames against the avian contact-graph rebuild. mimalloc
# uses per-thread heaps and lock-free fast paths, giving consistent
# frame times. Wasm has its own allocator path, so this dep is native-
# only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"
lunco-celestial-ephemeris = { path = "../lunco-celestial-ephemeris" }

[features]
default = ["celestial"]
celestial = []
sandbox = []
# Tracy profiler. Enable with `--features tracy` and connect a Tracy
# GUI to see per-system flame graphs. Match the GUI version to the
# tracy-client version pulled in by Bevy 0.18 (check `cargo tree -p
# tracy-client` after enabling).
tracy = ["bevy/trace_tracy"]

# Web-specific: wasm32-unknown-unknown needs JS interop for console output,
# panic hooks, and RNG (std::time is unavailable on wasm32).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lints]
workspace = true
