[package]
name = "lunco-client"
version = "0.6.0-dev"
edition = "2021"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
# Single source for desktop AND web — `#[cfg(target_arch = "wasm32")]`
# blocks in `sandbox.rs` handle platform differences, so `build_web.sh
# build sandbox` just compiles this bin with `--target
# wasm32-unknown-unknown`. No `_web` alias; served at `dist/sandbox/`.

[[bin]]
name = "lunco_client_web"
path = "src/bin/lunco_client_web.rs"

[[bin]]
name = "model_viewer"
path = "src/bin/model_viewer.rs"

[dependencies]
# GUI binary: pbr/gltf/etc pull bevy_render; the windowing backend
# (bevy_winit/bevy_window/x11/wayland/webgl2/bevy_picking) is no longer in the
# workspace default, so this — the GUI binary crate — adds it here. (Phase 2
# will move these behind a `ui` feature so a `--no-ui` server build omits them.)
bevy = { workspace = true, features = ["bevy_pbr", "bevy_gltf", "bevy_scene", "bevy_mesh", "bevy_light", "bevy_post_process", "bevy_anti_alias", "smaa_luts", "mesh_picking", "tonemapping_luts", "bevy_gizmos", "bevy_gizmos_render", "bevy_winit", "bevy_window", "x11", "wayland", "webgl2", "bevy_picking"] }
avian3d = { workspace = true }
big_space = { workspace = true }
leafwing-input-manager = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-hardware = { path = "../lunco-hardware" }
lunco-mobility = { path = "../lunco-mobility" }
lunco-robotics = { path = "../lunco-robotics" }
lunco-controller = { path = "../lunco-controller" }
lunco-fsw = { path = "../lunco-fsw" }
lunco-avatar = { path = "../lunco-avatar" }
lunco-render = { path = "../lunco-render" }
lunco-celestial = { path = "../lunco-celestial" }
lunco-terrain = { path = "../lunco-terrain" }
lunco-materials = { path = "../lunco-materials" }
lunco-modelica = { path = "../lunco-modelica", default-features = false }
lunco-cosim = { path = "../lunco-cosim" }
lunco-environment = { path = "../lunco-environment" }
lunco-scripting = { path = "../lunco-scripting" }
lunco-doc = { path = "../lunco-doc" }
lunco-theme = { path = "../lunco-theme" }
lunco-usd = { path = "../lunco-usd" }
lunco-sandbox-edit = { path = "../lunco-sandbox-edit" }
lunco-ui = { path = "../lunco-ui" }
lunco-workbench = { path = "../lunco-workbench" }
lunco-web = { workspace = true }
lunco-assets = { workspace = true }
# `default-features = false` so the native (`lunco-api`) and web (`web`)
# features choose the transport: `transport-http` (axum/TcpListener) vs.
# `transport-wasm` (the `window.lunco_api` JS bridge).
lunco-api = { path = "../lunco-api", optional = true, default-features = false }
lunco-networking = { path = "../lunco-networking", optional = true }
bevy_egui = { workspace = true }

# Replace glibc's allocator with mimalloc on native targets. Bevy +
# avian generate huge cross-thread allocator traffic; glibc's
# arena-per-thread fallback still hits a global lock which serialised
# our hot frames against the avian contact-graph rebuild. mimalloc
# uses per-thread heaps and lock-free fast paths, giving consistent
# frame times. Wasm has its own allocator path, so this dep is native-
# only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"
lunco-celestial-ephemeris = { path = "../lunco-celestial-ephemeris" }

[features]
# `lunco-api` is on by default so native `cargo run --bin sandbox -- --api`
# Just Works. Building without it (`--no-default-features`) drops the
# axum/tokio web stack, which is mandatory for wasm32-unknown-unknown.
default = ["celestial", "lunco-api", "lunco-api/transport-http", "lunco-api/render"]
# `celestial` pulls in lunco-celestial's bundled Earth texture + Artemis-II
# ephemeris (10s of MB). Off for the wasm sandbox build — it only needs
# `GravityPlugin`, which is always compiled.
celestial = ["lunco-celestial/embed-assets"]
sandbox = []
# Compile the API in. Transport is chosen automatically: the native HTTP
# server comes from `lunco-api/transport-http` (added to `default` above);
# the wasm build (`build_web.sh --features lunco-api`) gets the
# `window.lunco_api` JS bridge automatically via `cfg(target_arch="wasm32")`.
lunco-api = ["dep:lunco-api"]
# Multiplayer over WebTransport (lightyear). Pulls in the real networking
# adapter; the wire substrate (lunco-api) is required.
networking = ["dep:lunco-networking", "lunco-networking/networking", "lunco-api"]
# Netcode jitter diagnostics — off by default (not in normal builds). Build with
# `--features networking,net-diag` when debugging; see lunco-networking/diagnostics.rs.
net-diag = ["networking", "lunco-networking/net-diag"]
python = ["lunco-scripting/python"]
# Built-in screen recording (Ctrl+Shift+R). Forwards to lunco-avatar's encoder,
# which links libx264 — native Linux/macOS only, NOT Windows or wasm. Build with
# `cargo run --bin sandbox --features recording`. Without it the recording
# settings/hotkey exist but capture nothing.
recording = ["lunco-avatar/recording"]
# Tracy profiler. Enable with `--features tracy` and connect a Tracy
# GUI to see per-system flame graphs. Match the GUI version to the
# tracy-client version pulled in by Bevy 0.18 (check `cargo tree -p
# tracy-client` after enabling).
tracy = ["bevy/trace_tracy"]

# Web-specific: wasm32-unknown-unknown needs JS interop for console output,
# panic hooks, and RNG (std::time is unavailable on wasm32).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# URL-parameter boot path (`?workspace=…&open=…`) reads `window.location.search`.
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = "0.3"

[lints]
workspace = true
